--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:17.0.0'
     implementation 'com.google.firebase:firebase-auth:17.0.0'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
-    implementation 'com.github.vipulasri:timelineview:1.1.0'
+    implementation 'com.android.support:support-v13:28.0.0'
+    implementation 'com.mikhaellopez:circularimageview:3.2.0'
 }
 apply plugin: 'com.google.gms.google-services'
