--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".EndActivity"></activity>
+        <activity android:name=".QuizzActivity" />
+        <activity android:name=".PlayActivity" />
+        <activity android:name=".HomeActivity" />
         <activity android:name=".SignupActivity" />
         <activity android:name=".MainActivity" />
         <activity
