--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'com.android.support:support-v13:28.0.0'
     implementation 'com.mikhaellopez:circularimageview:3.2.0'
+    implementation 'me.itangqi.waveloadingview:library:0.3.5'
 }
 apply plugin: 'com.google.gms.google-services'
